添加 了IPC和windows 服务
把已前写的IPC和Windows服务 ，以及其它工程添加进来了

--- a/Common/Logger/Logger.vcxproj
+++ b/Common/Logger/Logger.vcxproj
@@ -64,12 +64,14 @@
   <ItemGroup>
     <ClInclude Include="ConditionVariable.h" />
     <ClInclude Include="CriticalSection.h" />
+    <ClInclude Include="Load_lib.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="RWLock.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ConditionVariable.cpp" />
     <ClCompile Include="CriticalSection.cpp" />
+    <ClCompile Include="Load_lib.cpp" />
     <ClCompile Include="RWLock.cpp" />
   </ItemGroup>
   <ItemGroup>
